corrected contrast in contac.html

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,12 @@ input:focus, textarea:focus {
 }
 
 label {
-    color: #555250;
+    color: #54595f;
+}
+
+#get-in-touch {
+    color: white;
+    font-weight: 900;
+    font-size: 1.2em;
 }
 
